Suppress "sun.misc.Unsafe::staticFieldBase will be removed in a future release" warning (JEP 498)